# EasyBot_GUI

./: .gitignore  BotEngine.cpp  BotEngine.h  CMakeLists.txt  EasyBot_GUI.cpp  EasyGUIInstaller.iss  LuaBindings.h  LuaEngine.cpp  LuaEngine.h  app_icon.rc  bot.proto  const.h  icon.qrc  proto_functions_client.cpp  proto_functions_client.h  vcpkg.json
MVC/Controller/Healing/: HealingController.cpp  HealingController.h
MVC/Controller/Looting/: LootingController.cpp  LootingController.h
MVC/Controller/MainBot/: BotController.cpp  BotController.h
MVC/Controller/Scripts/: ScriptsController.cpp  ScriptsController.h
MVC/Controller/Spells/: SpellsController.cpp  SpellsController.h
MVC/Controller/Targeting/: TargetingController.cpp  TargetingController.h
MVC/Controller/Walker/: WalkerController.cpp  WalkerController.h
MVC/Model/AgentAI/AgentThread/: AgentThread.cpp
MVC/Model/Healing/: HealingModel.cpp  HealingModel.h
MVC/Model/Healing/HealingThread/: StartHealing_Thread.cpp  StartHealing_Thread.h
MVC/Model/Looting/: LootingModel.cpp  LootingModel.h
MVC/Model/Looting/LootingThread/: LootItems_Thread.cpp  LootItems_Thread.h
MVC/Model/Scripts/: ScriptsModel.cpp  ScriptsModel.h
MVC/Model/Scripts/ScriptsThread/: RunScripts_Thread.cpp  RunScripts_Thread.h
MVC/Model/Spells/: SpellsModel.cpp  SpellsModel.h
MVC/Model/Spells/SpellsThread/: UseSpell_Thread.cpp  UseSpell_Thread.h
MVC/Model/Targeting/: TargetingModel.cpp  TargetingModel.h
MVC/Model/Targeting/TargetingThread/: AttackTargets_Thread.cpp  AttackTargets_Thread.h
MVC/Model/Walker/: WalkerModel.cpp  WalkerModel.h
MVC/Model/Walker/WalkerThread/: FollowWaypoints_Thread.cpp  FollowWaypoints_Thread.h  RecordWaypoints_Thread.cpp  RecordWaypoints_Thread.h
MVC/View/AgentAI/: AgentAIView.ui
MVC/View/Healing/: HealingView.cpp  HealingView.h  HealingView.ui
MVC/View/Looting/: LootingView.cpp  LootingView.h  LootingView.ui
MVC/View/MainBot/: BotView.cpp  BotView.h  BotView.ui
MVC/View/Scripts/: Highlighter.cpp  ScriptsView.cpp  ScriptsView.h
MVC/View/Spells/: SpellsView.cpp  SpellsView.h  SpellsView.ui
MVC/View/Targeting/: TargetingView.cpp  TargetingView.h  TargetingView.ui
MVC/View/Walker/: WalkerView.cpp  WalkerView.h  WalkerView.ui
